syntax = "proto3";

package store.internal.pb;
option go_package = "github.com/tanush-128/openzo_backend/store/internal/pb";


service ImageService {
  
  rpc UploadImage(ImageMessage) returns (ImageURL) {}
  rpc UploadMultipleImage (stream ImageMessage) returns (stream ImageURL) {}

  // Add more RPC methods for other user operations
}

message ImageMessage {
  bytes image_data = 1;
}

message ImageURL {
    string url = 1;
}


// To generate the go code from the proto file, run the following command
// protoc --go_out=. --go_opt=paths=source_relative \
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     image.proto